--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ AvalCont2/Pergunta1AvalContinua2.ipynb
 AvalCont2/Pergunta2AvalContinua2.ipynb
 AvalCont2/Pergunta3AvalContinua2.ipynb
 AvalCont2/__pycache__/
+ProjectoKalah_v2/Imagens
+ProjectoKalah_v2/jogoKalah-proj2_v2.ipynb
