Initial AV4 files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ AvalCont2/Pergunta3AvalContinua2.ipynb
 AvalCont2/__pycache__/
 ProjectoKalah_v2/Imagens
 ProjectoKalah_v2/jogoKalah-proj2_v2.ipynb
+AvalCont4/Enunciado.ipynb
