--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ AvalCont2/__pycache__/
 ProjectoKalah_v2/Imagens
 ProjectoKalah_v2/jogoKalah-proj2_v2.ipynb
 AvalCont4/Enunciado.ipynb
+sokoban/Sokoban_enunciado.ipynb
